// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.connected-toast > render with orientation 1`] = `
.c0 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c1 {
  display: flex;
  max-height: 100vh;
  outline: transparent solid 0px;
  position: absolute;
}

.c1 > * {
  max-height: inherit;
}

.c11 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c11 * {
  width: 1px;
  height: 1px;
}

.c7 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c7 > span {
  display: inline-block;
}

.c7.c7 {
  max-width: unset;
}

.c3 {
  display: inline-flex;
  outline: none;
}

.c5 {
  background-color: rgb(5, 104, 174);
  box-shadow: rgba(22, 25, 29, 0.4) 2px 2px 2px 0px;
  flex: 0 0 auto;
  font-size: 0px;
  min-height: 48px;
  padding: 16px 0px 0px;
  text-align: center;
  width: 48px;
}

.c5 .c6 {
  color: rgb(255, 255, 255);
  font-size: 1.5rem;
}

.c8 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  border-width: 1px 1px 1px medium;
  border-style: solid solid solid none;
  border-color: transparent transparent transparent currentcolor;
  border-image: initial;
  box-shadow: rgba(22, 25, 29, 0.4) 2px 2px 2px 0px;
  display: flex;
  flex: 0 1 auto;
  flex-direction: column;
  overflow-wrap: break-word;
  max-width: 432px;
  min-width: 98px;
}

.c8.c8 {
  border-color: rgb(5, 104, 174);
}

.c10 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  padding: 16px;
}

.c4 {
  position: relative;
  margin-left: 6px;
}

.c4::before {
  background-color: rgb(5, 104, 174);
  border-width: medium medium 1px 1px;
  border-style: none none solid solid;
  border-color: currentcolor currentcolor rgb(5, 104, 174) rgb(5, 104, 174);
  border-image: initial;
  content: "";
  height: 8px;
  pointer-events: none;
  position: absolute;
  transform: rotate(45deg);
  width: 8px;
  left: -4px;
}

.c4::before {
  top: 20px;
}

.c4.c4 {
  margin: 0px 16px 8px 8px;
}

.c9 {
  justify-content: center;
}

.c2 {
  animation: 0.3s ease 0s 1 normal none running k0;
}

@keyframes k0 {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

<div>
  <div
    class="c0"
    data-role="portal-placeholder"
  >
    <div
      class="portal base"
      data-role="portal"
    >
      <div>
        <div
          class="c1 attached-portal h_rightStart c2 toast-animation--connected"
          data-role="attached-portal"
          style="top: 10px; left: 130px; visibility: visible; opacity: 1; max-height: 720px; max-width: 1150px;"
          tabindex="-1"
        >
          <div
            class="c3 c4 toast toast--connected toast--info"
            data-role="toast"
            tabindex="-1"
          >
            <div
              class="c5 toast__left"
              data-role="toast-left"
            >
              <i
                class="c6 c7 plasma-icon"
                data-role="plasma-icon"
              >
                <span
                  aria-hidden="true"
                >
                  info
                </span>
              </i>
            </div>
            <div
              class="c8 c9 toast__right"
              data-role="toast-right"
            >
              <div
                class="c10 toast__content"
                data-role="toast-content"
              >
                <div
                  class="toast__message"
                  data-role="toast-message"
                >
                  <span
                    class="c11 -u-unseenButRead"
                    data-role="hidden-text"
                  >
                    , ESC to close message
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tab-sandbox-supporter"
          data-role="tab-sandbox-supporter"
          tabindex="0"
        />
        <div
          class="c0"
          data-role="portal-placeholder"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.connected-toast > verify the basic connected toast structure 1`] = `
.c0 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c1 {
  display: flex;
  max-height: 100vh;
  outline: transparent solid 0px;
  position: absolute;
}

.c1 > * {
  max-height: inherit;
}

.c11 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c11 * {
  width: 1px;
  height: 1px;
}

.c7 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c7 > span {
  display: inline-block;
}

.c7.c7 {
  max-width: unset;
}

.c3 {
  display: inline-flex;
  outline: none;
}

.c5 {
  background-color: rgb(5, 104, 174);
  box-shadow: rgba(22, 25, 29, 0.4) 2px 2px 2px 0px;
  flex: 0 0 auto;
  font-size: 0px;
  min-height: 48px;
  padding: 16px 0px 0px;
  text-align: center;
  width: 48px;
}

.c5 .c6 {
  color: rgb(255, 255, 255);
  font-size: 1.5rem;
}

.c8 {
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  border-width: 1px 1px 1px medium;
  border-style: solid solid solid none;
  border-color: transparent transparent transparent currentcolor;
  border-image: initial;
  box-shadow: rgba(22, 25, 29, 0.4) 2px 2px 2px 0px;
  display: flex;
  flex: 0 1 auto;
  flex-direction: column;
  overflow-wrap: break-word;
  max-width: 432px;
  min-width: 98px;
}

.c8.c8 {
  border-color: rgb(5, 104, 174);
}

.c10 {
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  padding: 16px;
}

.c4 {
  position: relative;
  margin-top: 6px;
}

.c4::before {
  background-color: rgb(5, 104, 174);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(5, 104, 174) currentcolor currentcolor rgb(5, 104, 174);
  border-image: initial;
  content: "";
  height: 8px;
  pointer-events: none;
  position: absolute;
  transform: rotate(45deg);
  width: 8px;
  top: -4px;
}

.c4::before {
  left: 20px;
}

.c4.c4 {
  margin: 8px 8px 16px 0px;
}

.c9 {
  justify-content: center;
}

.c2 {
  animation: 0.3s ease 0s 1 normal none running k0;
}

@keyframes k0 {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

<div>
  <div
    class="c0"
    data-role="portal-placeholder"
  >
    <div
      class="portal base"
      data-role="portal"
    >
      <div>
        <div
          class="c1 attached-portal h_bottomStart c2 toast-animation--connected"
          data-role="attached-portal"
          style="top: 21px; left: 0px; visibility: visible; opacity: 1; max-height: 689px; max-width: 1280px;"
          tabindex="-1"
        >
          <div
            class="c3 c4 toast toast--connected toast--info class"
            data-role="toast"
            id="id"
            style="font-size: 10px;"
            tabindex="-1"
          >
            <div
              class="c5 toast__left"
              data-role="toast-left"
            >
              <i
                class="c6 c7 plasma-icon"
                data-role="plasma-icon"
              >
                <span
                  aria-hidden="true"
                >
                  info
                </span>
              </i>
            </div>
            <div
              class="c8 c9 toast__right"
              data-role="toast-right"
            >
              <div
                class="c10 toast__content"
                data-role="toast-content"
              >
                <div
                  class="toast__message"
                  data-role="toast-message"
                >
                  <span
                    class="c11 -u-unseenButRead"
                    data-role="hidden-text"
                  >
                    , ESC to close message
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tab-sandbox-supporter"
          data-role="tab-sandbox-supporter"
          tabindex="0"
        />
        <div
          class="c0"
          data-role="portal-placeholder"
        />
      </div>
    </div>
  </div>
</div>
`;
